--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
     "react-snap-carousel": "^0.4.0",
     "react-touch-carousel": "^0.10.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
