--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
