--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build && npm run sentry:sourcemaps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org macachallenge --project javascript-react ./build && sentry-cli sourcemaps upload --org macachallenge --project javascript-react ./build"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org macachallenge --project maca-challenge-sentry ./build && sentry-cli sourcemaps upload --org macachallenge --project maca-challenge-sentry ./build"
   },
   "eslintConfig": {
     "extends": [
